Adding Error-Handling for product-service